# KursachOOP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_graph.py
example_jsons/: example1.json  example2.json
libs/: CMakeLists.txt
src/: application.cpp  application.hpp  empty_renderer.hpp  empty_window.hpp  factories.cpp  factories.hpp  factory_base.hpp  frontend.cpp  frontend.hpp  graph.cpp  graph.hpp  graphics.cpp  graphics.hpp  graphics_object.hpp  json_deserializable.hpp  main.cpp  node.cpp  node.hpp  process_manager.cpp  process_manager.hpp  processes.hpp  renderer.cpp  renderer.hpp  roads.hpp  router.cpp  router.hpp  simulation.cpp  simulation.hpp  smooth_zoom_process.hpp  texture_loader.cpp  texture_loader.hpp  vechicle.hpp  vechicle_factory.cpp  vechicle_factory.hpp  vechicles.cpp  vechicles.hpp  vehicle.hpp  vehicles.cpp  vehicles.hpp  vertex.hpp  (+5 more)
